--- a/html/pic-viewer/pic.html
+++ b/html/pic-viewer/pic.html
@@ -2,7 +2,7 @@
  * @Author: tim
  * @Date: 2020-07-15 09:59:07
  * @LastEditors: tim
- * @LastEditTime: 2020-07-16 15:46:05
+ * @LastEditTime: 2020-07-27 17:10:44
  * @Description: 
 --> 
 <!DOCTYPE html>
@@ -48,7 +48,7 @@
   <div class="viewer-wrapper">
     <div class="viewer-container viewer-backdrop" touch-action="none" style="z-index: 2017; width: 1116px; height: 511px;">
       <div class="viewer-canvas">
-        <img id="zoomPic" src="/static/img/p4.jpg" class="viewer-move viewer-transition" style="height: 423.9px; margin-left: 218.88px; margin-top: 43.55px; width: 678.24px; max-width: none !important; transform: rotate(0deg);" />
+        <img id="zoomPic" src="" class="viewer-move viewer-transition" style="height: 423.9px; margin-left: 218.88px; margin-top: 43.55px; width: 678.24px; max-width: none !important; transform: rotate(0deg);" />
       </div>
     </div>  
 </div>
