--- a/html/响应性图片等比例缩放/index.html
+++ b/html/响应性图片等比例缩放/index.html
@@ -2,7 +2,7 @@
  * @Author: tim
  * @Date: 2020-07-29 13:42:42
  * @LastEditors: tim
- * @LastEditTime: 2020-07-29 13:47:12
+ * @LastEditTime: 2020-09-09 09:39:39
  * @Description: 
 -->
 <!DOCTYPE html>
@@ -16,8 +16,9 @@
         max-width: 1024px;
       }
       .figure {
-        padding-top: 30.85%; /* 316 / 1024 */
-        background: url("./pic.jpg") no-repeat;
+        /*padding-top: 30.85%;*/ /* 316 / 1024 */
+        padding-top: 323.48%; /* 高/宽 */
+        background: url("./pic2.jpg") no-repeat;
         background-size: cover;
         background-position: center;
       }
