--- a/设计模式/发布-订阅/demo1.html
+++ b/设计模式/发布-订阅/demo1.html
@@ -2,7 +2,7 @@
  * @Author: tim
  * @Date: 2020-07-28 14:22:53
  * @LastEditors: tim
- * @LastEditTime: 2020-07-28 14:26:43
+ * @LastEditTime: 2020-09-09 09:46:51
  * @Description: 
 -->
 <!DOCTYPE html>
@@ -17,7 +17,7 @@
     <script>
       (function () {
         Event.listen("size", function (size) {
-          console.log("尺码为:" + size); // 打印出尺码为42
+          console.log("尺码为:" + size, this); // 打印出尺码为42
         });
         Event.listen("color", function (color) {
           console.log("颜色为:" + color);
