--- a/html/XMLHttp/index.html
+++ b/html/XMLHttp/index.html
@@ -2,7 +2,7 @@
  * @Author: tim
  * @Date: 2020-10-26 09:38:02
  * @LastEditors: tim
- * @LastEditTime: 2020-10-29 14:00:23
+ * @LastEditTime: 2020-11-05 16:33:49
  * @Description: 
 -->
 <!DOCTYPE html>
@@ -11,9 +11,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    .loading {
+      position: relative;
+      line-height: 30px;
+    }
+    .loading .process {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 9;
+      display: inline-block;
+      background: rgba(0, 0, 0, .1);
+      width: 10px;
+      height: 30px;
+      animation: process 1s ease alternate infinite;
+    }
+
+    @keyframes process {
+      0%{
+        opacity:0;
+        -webkit-transform:translateX(-20px)}
+
+      100%{
+        opacity:1;
+          -webkit-transform:translateX(85px)}
+    }
+  </style>
 </head>
 <body>
-  <div class="loading">loading……</div>
+  <div class="loading">
+    loading……
+    <span class="process"></span>
+  </div>
   
   <script>
     function getJSON(url) {
@@ -56,7 +86,7 @@
     
     getJSON('test.json').then(function(data){
       setTimeout(function(){
-        document.querySelector(".loading").innerHTML = 'load completed'
+        //document.querySelector(".loading").innerHTML = 'load completed'
       }, 3000);
       console.log('dothen')
     }).catch(function(e) {
