--- a/html/防抖和节流.html
+++ b/html/防抖和节流.html
@@ -96,14 +96,33 @@
   document.querySelector('#throttle').addEventListener('click', throttle(getUserAction, 1000))
   </script>
 
-script start
-async1 start
-async2
-async1 end
-script end
-promise1
-promise2
-setTimeout
+
+  <p>通过 requestAnimationFrame 触发滚动事件</p>
+
+  window.requestAnimationFrame() 这个方法是用来在页面重绘之前，通知浏览器调用一个指定的函数。这个方法接受一个函数为参，该函数会在重绘前调用。<br/>
+
+  rAF 常用于 web 动画的制作，用于准确控制页面的帧刷新渲染，让动画效果更加流畅，当然它的作用不仅仅局限于动画制作，我们可以利用它的特性将它视为一个定时器。（当然它不是定时器）<br/>
+
+  通常来说，rAF 被调用的频率是每秒 60 次，也就是 1000/60 ，触发频率大概是 16.7ms 。（当执行复杂操作时，当它发现无法维持 60fps 的频率时，它会把频率降低到 30fps 来保持帧数的稳定。）
+
+  <script>
+    var ticking = false; // rAF 触发锁
+ 
+    function onScroll(){
+      if(!ticking) {
+        requestAnimationFrame(realFunc);
+        ticking = true;
+      }
+    }
+      
+    function realFunc(){
+        // do something...
+        console.log("Success");
+        ticking = false;
+    }
+    // 滚动事件监听
+    window.addEventListener('scroll', onScroll, false);
+  </script>
 
 </body>
 </html>
