--- a/html/文本行斑马条纹.html
+++ b/html/文本行斑马条纹.html
@@ -2,7 +2,7 @@
  * @Author: tim
  * @Date: 2020-11-20 09:21:01
  * @LastEditors: tim
- * @LastEditTime: 2020-11-20 09:32:16
+ * @LastEditTime: 2020-11-20 11:15:58
  * @Description: 
 -->
 <!DOCTYPE html>
@@ -16,6 +16,18 @@
       margin: 0;
       padding: 0;
     }
+
+    body {
+      display: flex;
+      /* flex-direction: column; */
+      flex-flow: column;
+      min-height: 100vh;
+    }
+
+    .main {
+      flex: 1;
+    }
+
     .line {
       width: 300px;
       padding: .5em;
@@ -27,11 +39,64 @@
       font-size: 16px;
       box-sizing: border-box;
     }
+    .table {
+      width: 500px;
+      table-layout: fixed;
+    }
+
+    footer {
+      background: #333; 
+      color: #fff;
+      padding: 1em;
+      /* 页面宽小于900px时，左右 padding 为0 */
+      padding: 1em calc(50% - 450px); 
+    }
+    .wrapper {
+      max-width: 900px;
+      margin: 1em auto;
+    }
   </style>
 </head>
 <body>
-  <div class="line">
-    在事件处理程序中调用 event.preventDefault() 或 event.stopPropagation() 是非常常见的需求。尽管我们可以在方法中轻松实现这点，但更好的方式是：方法只有纯粹的数据逻辑，而不是去处理 DOM 事件细节。
+  <div class="main">
+    <div class="line">
+      在事件处理程序中调用 event.preventDefault() 或 event.stopPropagation() 是非常常见的需求。尽管我们可以在方法中轻松实现这点，但更好的方式是：方法只有纯粹的数据逻辑，而不是去处理 DOM 事件细节。
+    </div>
+
+    <h1>精确控制表格列宽</h1>
+    <p>
+      这种固定表格布局算法不仅更容易预测、 便于使用， 同时也明显更快。
+因为表格的内容并不会影响单元格的宽度， 所以在页面的下载过程中， 表格
+不需要频繁重绘。 </p> 
+<p>相信我们都对页面加载过程中表格不断重新调整列宽的恐
+怖情景记忆犹新。 对于固定表格布局来说， 这种情况再也不会发生了。
+在使用时， 我们只需要对 table 元素或其他具有 display: table 样
+式的元素应用这个属性即可。 </p>
+<p>
+请注意， 为了确保这个技巧奏效， 需要为这
+些表格元素指定一个宽度（ 哪怕是 100%）。 同样， 为了让 text-overflow:
+ellipsis 发挥作用， 我们还需要为那一列指定宽度。 这就行了！ 
+    </p>
+    <table class="table">
+      <tr>
+        <td width="150">表格的每一行都会参与到列宽的计算中，而不仅是第一行</td>
+        <td width="100">指定单元格的宽度，则这些单元格就会根据它们内容的长短来分配宽度。也就是说，内容较长的单元格所能分配到的宽度也较多</td>
+        <td width="100">注意，这个表格的列宽分配结果跟上面那个表格不同</td>
+        <td width="120">
+          如果我们禁止文本折行行为，那么表格宽度可能会远远超出其容器的宽度
+        </td>
+        <td width="130">
+          注意，这个表格的列宽分配结果跟上面那个表格不同
+        </td>
+      </tr>
+    </table>
   </div>
+
+  <footer>
+    <!-- <div class="wrapper"> -->
+    <!-- 页脚的内容写在这里 -->
+    在过去的几年间， 有一种网页设计手法逐渐流行起来， 我将它称作背景宽度满幅， 内容宽度固定。 
+    <!-- </div> -->
+  </footer>
 </body>
 </html>
