--- a/html/文本行斑马条纹.html
+++ b/html/文本行斑马条纹.html
@@ -2,7 +2,7 @@
  * @Author: tim
  * @Date: 2020-11-20 09:21:01
  * @LastEditors: tim
- * @LastEditTime: 2020-11-20 11:15:58
+ * @LastEditTime: 2020-11-20 15:25:54
  * @Description: 
 -->
 <!DOCTYPE html>
@@ -55,6 +55,25 @@
       max-width: 900px;
       margin: 1em auto;
     }
+
+    .title {
+      font-size: 20px;
+      font-weight: bold;
+      /* height: 0; */
+      transform: scale(0);
+      /* transition: all .5s; */
+      transition: .25s;
+      transform-origin: 1.4em -.4em;
+      overflow: hidden;
+    }
+    .title.show {
+      /* height: auto; */
+      /* max-height: 300px; */
+      /* height: 80px; */
+      transform: scale(1);
+      /* transition: .5s cubic-bezier(.25,.1,.3,1.5); */
+      transition: .5s cubic-bezier(.25,.1,.3,1);
+    }
   </style>
 </head>
 <body>
@@ -62,8 +81,10 @@
     <div class="line">
       在事件处理程序中调用 event.preventDefault() 或 event.stopPropagation() 是非常常见的需求。尽管我们可以在方法中轻松实现这点，但更好的方式是：方法只有纯粹的数据逻辑，而不是去处理 DOM 事件细节。
     </div>
-
-    <h1>精确控制表格列宽</h1>
+    <p>
+      <button id="btnShow">SHOW</button>
+    </p>
+    <h1 class="title">精确控制表格列宽</h1>
     <p>
       这种固定表格布局算法不仅更容易预测、 便于使用， 同时也明显更快。
 因为表格的内容并不会影响单元格的宽度， 所以在页面的下载过程中， 表格
@@ -98,5 +119,20 @@ ellipsis 发挥作用， 我们还需要为那一列指定宽度。 这就行了
     在过去的几年间， 有一种网页设计手法逐渐流行起来， 我将它称作背景宽度满幅， 内容宽度固定。 
     <!-- </div> -->
   </footer>
+
+  <script>
+    var isShow = false
+    var btn = document.querySelector("#btnShow")
+    var title = document.querySelector(".title")
+
+    btn.addEventListener('click', function show() {
+      if (isShow) {
+        title.classList.remove('show')
+      } else {
+        title.classList.add('show')
+      }
+      isShow = ! isShow
+    })
+  </script>
 </body>
 </html>
