--- a/html/loader.html
+++ b/html/loader.html
@@ -2,7 +2,7 @@
  * @Author: tim
  * @Date: 2020-11-20 16:39:44
  * @LastEditors: tim
- * @LastEditTime: 2020-11-20 17:20:24
+ * @LastEditTime: 2020-11-30 17:32:46
  * @Description: 
 -->
 <!DOCTYPE html>
@@ -46,7 +46,7 @@
       border-right: .05em solid;      
       overflow: hidden;
       animation: typing 8s;
-      /* animation: typing 6s steps(15), caret 1s steps(1) infinite; */
+      animation: typing 6s steps(15), caret 1s steps(1) infinite;
     }
   </style>
 </head>
