--- a/html/文本行斑马条纹.html
+++ b/html/文本行斑马条纹.html
@@ -2,7 +2,7 @@
  * @Author: tim
  * @Date: 2020-11-20 09:21:01
  * @LastEditors: tim
- * @LastEditTime: 2020-11-24 09:44:51
+ * @LastEditTime: 2020-11-30 16:54:09
  * @Description: 
 -->
 <!DOCTYPE html>
@@ -56,6 +56,15 @@
       margin: 1em auto;
     }
 
+    h1 {
+      font-size: 16px;
+    }
+    .main .title {
+      font-size: 18px;
+    }
+    .main .title.show {
+      font-size: 22px;
+    }
     .title {
       font-size: 20px;
       font-weight: bold;
@@ -67,6 +76,7 @@
       overflow: hidden;
     }
     .title.show {
+      font-size: 20px;
       /* height: auto; */
       /* max-height: 300px; */
       /* height: 80px; */
