--- a/html/RegExp.html
+++ b/html/RegExp.html
@@ -2,7 +2,7 @@
  * @Author: tim
  * @Date: 2020-09-08 17:02:22
  * @LastEditors: tim
- * @LastEditTime: 2020-11-30 18:10:25
+ * @LastEditTime: 2020-12-01 10:10:41
  * @Description: 
 -->
 <!DOCTYPE html>
@@ -152,7 +152,9 @@
       // 正则表示默认是贪婪匹配，如果实现懒惰匹配，在量词元字符后面添加一个？即可。
       // 如果使用贪婪匹配，我们会匹配到最后一个}}，而不是第一个结束的}}。
       function render(tpl, data) {
-        return tpl.replace(/\{\{(.+?)\}\}/g, function($1, $2) {
+        // var regex = /\{\{(.+?)\}\}/g  // 未考虑空格
+        var regex = /\{\{[\s]*(\w+?)[\s]*\}\}/g
+        return tpl.replace(regex, function($1, $2) {
           // $1 分组为 类似 {{name}}
           // $2 分组为 类似 name
           // 加上面的小括号就是为了方便拿到key而已
