--- a/html/RegExp.html
+++ b/html/RegExp.html
@@ -2,7 +2,7 @@
  * @Author: tim
  * @Date: 2020-09-08 17:02:22
  * @LastEditors: tim
- * @LastEditTime: 2020-12-03 11:12:44
+ * @LastEditTime: 2020-12-10 14:06:06
  * @Description: 一花独放不是春，百花齐放春满园, 纸上得来终觉浅，觉知此事要躬行。
 -->
 <!DOCTYPE html>
@@ -14,13 +14,7 @@
   </head>
   <body>
 
-    回溯法也称试探法，它的基本思想是：从问题的某一种状态（初始状态）出发，搜索从这种状态出发
-    所能达到的所有“状态”，当一条路走到“尽头”的时候（不能再前进），再后退一步或若干步，从
-    另一种可能“状态”出发，继续搜索，直到所有的“路径”（状态）都试探过。这种不断“前进”、
-    不断“回溯”寻找解的方法，就称作“回溯法”。
-
-    本质上就是深度优先搜索算法。其中退到之前的某一步这一过程，我们称为“回溯”。从上面的描述过程中，可以看出，路走不通时，就会发生“回溯”。
-    即，尝试匹配失败时，接下来的一步通常就是回溯。
+    <h1>正则表达式是匹配模式，要么匹配字符，要么匹配位置。</h1>   
 
     <script>
       // 正则表达式是匹配模式，要么匹配字符，要么匹配位置
