--- a/html/RegExp.html
+++ b/html/RegExp.html
@@ -2,7 +2,7 @@
  * @Author: tim
  * @Date: 2020-09-08 17:02:22
  * @LastEditors: tim
- * @LastEditTime: 2020-12-10 14:06:06
+ * @LastEditTime: 2020-12-10 16:48:51
  * @Description: 一花独放不是春，百花齐放春满园, 纸上得来终觉浅，觉知此事要躬行。
 -->
 <!DOCTYPE html>
@@ -15,6 +15,18 @@
   <body>
 
     <h1>正则表达式是匹配模式，要么匹配字符，要么匹配位置。</h1>   
+
+    <p>
+      用于正则操作的方法：字符串实例 4 个，正则实例 2 个
+    </p>
+    <p>
+      String#search </br>
+      String#split </br>
+      String#match </br>
+      String#replace </br>
+      RegExp#test </br>
+      RegExp#exec </br>
+    </p>
 
     <script>
       // 正则表达式是匹配模式，要么匹配字符，要么匹配位置
