--- a/html/js-sleep.html
+++ b/html/js-sleep.html
@@ -2,7 +2,7 @@
  * @Author: tim
  * @Date: 2020-04-01 17:34:07
  * @LastEditors: tim
- * @LastEditTime: 2020-04-01 17:42:07
+ * @LastEditTime: 2021-04-30 11:07:05
  * @Description: 
  -->
 <!DOCTYPE html>
@@ -24,7 +24,7 @@
 
     console.log('begin');
 
-    sleep(10000);
+    await sleep(10000);
 
     console.log('end');
 
